--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,8 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Retrieval Project</title>
-    <script type="module" crossorigin src="/assets/js/main-0105d17a.js"></script>
+    <script type="module" crossorigin src="/assets/js/main-0a8a7401.js"></script>
+    <link rel="stylesheet" href="/assets/css/index-14b04e31.css">
   </head>
   <body>
     <div id="app"></div>
