fixed issue with chart.js

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg" />
-    <link rel="stylesheet" href="/assets/css/smui.css" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,11 +13,12 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Retrieval Project</title>
-    <script type="module" crossorigin src="/assets/js/main-e7c3d4a2.js"></script>
-    <link rel="stylesheet" href="/assets/css/index-4a3f43bb.css">
+    <script type="module" crossorigin src="/assets/js/main-57edfbd4.js"></script>
+    <link rel="stylesheet" href="/assets/css/index-49853c08.css">
   </head>
   <body>
     <div id="app"></div>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
   </body>
 </html>
