--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,5 +18,6 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    </script>
   </body>
 </html>
