--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,13 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Retrieval Project</title>
-    <script type="module" crossorigin src="/assets/js/main-d4e70378.js"></script>
-    <link rel="stylesheet" href="/assets/css/index-bde7501f.css">
+    <script type="module" crossorigin src="/assets/js/main-2ab3c411.js"></script>
+    <link rel="stylesheet" href="/assets/css/index-25791d04.css">
   </head>
   <body>
     <div id="app"></div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    </script>
   </body>
 </html>
