--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0"></script>
   </body>
 </html>
