--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Retrieval Project</title>
-    <script type="module" crossorigin src="/assets/js/main-9910cfe3.js"></script>
-    <link rel="stylesheet" href="/assets/css/index-403d4ee3.css">
+    <script type="module" crossorigin src="/assets/js/main-f968f71c.js"></script>
+    <link rel="stylesheet" href="/assets/css/index-c5c1a66d.css">
   </head>
   <body>
     <div id="app"></div>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.min.js"></script>
     </script>
   </body>
 </html>
