--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,12 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Retrieval Project</title>
-    <script type="module" crossorigin src="/assets/js/main-f968f71c.js"></script>
-    <link rel="stylesheet" href="/assets/css/index-c5c1a66d.css">
+    <script type="module" crossorigin src="/assets/js/main-88417540.js"></script>
+    <link rel="stylesheet" href="/assets/css/index-51a45497.css">
   </head>
   <body>
     <div id="app"></div>
     
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.0/chart.min.js"></script>
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.0"></script>
   </body>
 </html>
